// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useSuspenseQuery should generate useSuspenseInfiniteQuery for infinite queries with suspense flag: useSuspenseInfiniteQuery hooks 1`] = `
"//@ts-nocheck
/**
 * AUTO_GENERATED Do not change this file directly, use config.ts file instead
 *
 * @version 6
 */

import { useMemo } from \\"react\\";
import { AxiosRequestConfig } from \\"axios\\";
import {
  UseQueryOptions,
  useQuery,
  useMutation,
  UseMutationOptions,
  useSuspenseInfiniteQuery,
  UseSuspenseInfiniteQueryOptions,
  QueryClient,
  QueryKey,
} from \\"@tanstack/react-query\\";
import { RequestError, SwaggerResponse } from \\"./config\\";
import { paginationFlattenData, getPageSize, getTotal } from \\"./hooksConfig\\";
import type {
  CreateOrderInput,
  GetProductsQueryParams,
  Order,
  Product,
  User,
} from \\"./types\\";
import { getProducts, getProductsId, getUsersId, postOrders } from \\"./services\\";

const useHasMore = (
  pages: Array<SwaggerResponse<any>> | undefined,
  list: any,
  queryParams: any,
) =>
  useMemo(() => {
    if (!pages || (pages && pages.length < 1)) {
      return false;
    }

    const total = getTotal(pages);

    if (total !== undefined) {
      if (list && list.length < total) {
        return true;
      }
      return false;
    }
    if (
      paginationFlattenData([pages[pages.length - 1]])?.length ===
      getPageSize(queryParams as any)
    ) {
      return true;
    }

    return false;
  }, [pages, list, queryParams]);

export type SwaggerTypescriptMutationDefaultParams<TExtra> = {
  _extraVariables?: TExtra;
  configOverride?: AxiosRequestConfig;
};
type SwaggerTypescriptUseQueryOptions<TData> = Omit<
  UseSuspenseQueryOptions<SwaggerResponse<TData>, RequestError | Error>,
  \\"queryKey\\"
>;

type SwaggerTypescriptUseMutationOptions<TData, TRequest, TExtra> =
  UseMutationOptions<
    SwaggerResponse<TData>,
    RequestError | Error,
    TRequest & SwaggerTypescriptMutationDefaultParams<TExtra>
  >;
export const useGetProducts = (
  queryParams?: GetProductsQueryParams,
  options?: UseSuspenseInfiniteQueryOptions<
    SwaggerResponse<Product[]>,
    RequestError | Error
  >,
  configOverride?: AxiosRequestConfig,
) => {
  const { key, fun } = useGetProducts.info(queryParams, configOverride);

  const {
    data: { pages } = {},
    data,
    ...rest
  } = useSuspenseInfiniteQuery({
    queryKey: key,
    queryFn: ({ pageParam }) => fun({ page: pageParam }),
    initialPageParam: 1,
    getNextPageParam: (_lastPage, allPages) => allPages.length + 1,
    ...(options as any),
  });

  const list = useMemo(() => paginationFlattenData(pages), [pages]);
  const total = getTotal(pages);
  const hasMore = useHasMore(pages, list, queryParams);

  return { ...rest, data, list, hasMore, total };
};
useGetProducts.info = (
  queryParams?: GetProductsQueryParams,
  configOverride?: AxiosRequestConfig,
) => {
  return {
    key: [getProducts.key, queryParams] as QueryKey,
    fun: (_param: Partial<GetProductsQueryParams>) =>
      getProducts({ ..._param, ...queryParams }, configOverride),
  };
};
useGetProducts.prefetch = (
  client: QueryClient,
  queryParams?: GetProductsQueryParams,
  options?: UseSuspenseInfiniteQueryOptions<
    SwaggerResponse<Product[]>,
    RequestError | Error
  >,
  configOverride?: AxiosRequestConfig,
) => {
  const { key, fun } = useGetProducts.info(queryParams, configOverride);

  return client.getQueryData(key)
    ? Promise.resolve()
    : client.prefetchQuery({
        queryKey: key,
        queryFn: () => fun(),
        ...options,
      });
};
export const useGetProductsId = (
  id: string,
  options?: SwaggerTypescriptUseQueryOptions<Product>,
  configOverride?: AxiosRequestConfig,
) => {
  const { key, fun } = useGetProductsId.info(id, configOverride);

  return useSuspenseQuery({
    queryKey: key,
    queryFn: fun,
    ...options,
  });
};
useGetProductsId.info = (id: string, configOverride?: AxiosRequestConfig) => {
  return {
    key: [getProductsId.key, id] as QueryKey,
    fun: () => getProductsId(id, configOverride),
  };
};
useGetProductsId.prefetch = (
  client: QueryClient,
  id: string,
  options?: SwaggerTypescriptUseQueryOptions<Product>,
  configOverride?: AxiosRequestConfig,
) => {
  const { key, fun } = useGetProductsId.info(id, configOverride);

  return client.getQueryData(key)
    ? Promise.resolve()
    : client.prefetchQuery({
        queryKey: key,
        queryFn: () => fun(),
        ...options,
      });
};
export const useGetUsersId = (
  id: string,
  options?: SwaggerTypescriptUseQueryOptions<User>,
  configOverride?: AxiosRequestConfig,
) => {
  const { key, fun } = useGetUsersId.info(id, configOverride);

  return useSuspenseQuery({
    queryKey: key,
    queryFn: fun,
    ...options,
  });
};
useGetUsersId.info = (id: string, configOverride?: AxiosRequestConfig) => {
  return {
    key: [getUsersId.key, id] as QueryKey,
    fun: () => getUsersId(id, configOverride),
  };
};
useGetUsersId.prefetch = (
  client: QueryClient,
  id: string,
  options?: SwaggerTypescriptUseQueryOptions<User>,
  configOverride?: AxiosRequestConfig,
) => {
  const { key, fun } = useGetUsersId.info(id, configOverride);

  return client.getQueryData(key)
    ? Promise.resolve()
    : client.prefetchQuery({
        queryKey: key,
        queryFn: () => fun(),
        ...options,
      });
};
export const usePostOrders = <TExtra,>(
  options?: SwaggerTypescriptUseMutationOptions<
    Order,
    { requestBody: CreateOrderInput },
    TExtra
  >,
) => {
  return useMutation({
    mutationFn: (_o) => {
      const { requestBody, configOverride } = _o || {};
      return postOrders(requestBody, configOverride);
    },
    ...options,
  });
};
"
`;

exports[`useSuspenseQuery should generate useSuspenseQuery hooks when createSuspenseHooks is enabled: useSuspenseQuery hooks 1`] = `
"//@ts-nocheck
/**
 * AUTO_GENERATED Do not change this file directly, use config.ts file instead
 *
 * @version 6
 */

import { AxiosRequestConfig } from \\"axios\\";
import {
  UseQueryOptions,
  useQuery,
  useMutation,
  UseMutationOptions,
  useSuspenseQuery,
  UseSuspenseQueryOptions,
  QueryClient,
  QueryKey,
} from \\"@tanstack/react-query\\";
import { RequestError, SwaggerResponse } from \\"./config\\";

import type {
  CreateOrderInput,
  GetProductsQueryParams,
  Order,
  Product,
  User,
} from \\"./types\\";
import { getProducts, getProductsId, getUsersId, postOrders } from \\"./services\\";

export type SwaggerTypescriptMutationDefaultParams<TExtra> = {
  _extraVariables?: TExtra;
  configOverride?: AxiosRequestConfig;
};
type SwaggerTypescriptUseQueryOptions<TData> = Omit<
  UseSuspenseQueryOptions<SwaggerResponse<TData>, RequestError | Error>,
  \\"queryKey\\"
>;

type SwaggerTypescriptUseMutationOptions<TData, TRequest, TExtra> =
  UseMutationOptions<
    SwaggerResponse<TData>,
    RequestError | Error,
    TRequest & SwaggerTypescriptMutationDefaultParams<TExtra>
  >;
export const useGetProducts = (
  queryParams?: GetProductsQueryParams,
  options?: SwaggerTypescriptUseQueryOptions<Product[]>,
  configOverride?: AxiosRequestConfig,
) => {
  const { key, fun } = useGetProducts.info(queryParams, configOverride);

  return useSuspenseQuery({
    queryKey: key,
    queryFn: fun,
    ...options,
  });
};
useGetProducts.info = (
  queryParams?: GetProductsQueryParams,
  configOverride?: AxiosRequestConfig,
) => {
  return {
    key: [getProducts.key, queryParams] as QueryKey,
    fun: () => getProducts(queryParams, configOverride),
  };
};
useGetProducts.prefetch = (
  client: QueryClient,
  queryParams?: GetProductsQueryParams,
  options?: SwaggerTypescriptUseQueryOptions<Product[]>,
  configOverride?: AxiosRequestConfig,
) => {
  const { key, fun } = useGetProducts.info(queryParams, configOverride);

  return client.getQueryData(key)
    ? Promise.resolve()
    : client.prefetchQuery({
        queryKey: key,
        queryFn: () => fun(),
        ...options,
      });
};
export const useGetProductsId = (
  id: string,
  options?: SwaggerTypescriptUseQueryOptions<Product>,
  configOverride?: AxiosRequestConfig,
) => {
  const { key, fun } = useGetProductsId.info(id, configOverride);

  return useSuspenseQuery({
    queryKey: key,
    queryFn: fun,
    ...options,
  });
};
useGetProductsId.info = (id: string, configOverride?: AxiosRequestConfig) => {
  return {
    key: [getProductsId.key, id] as QueryKey,
    fun: () => getProductsId(id, configOverride),
  };
};
useGetProductsId.prefetch = (
  client: QueryClient,
  id: string,
  options?: SwaggerTypescriptUseQueryOptions<Product>,
  configOverride?: AxiosRequestConfig,
) => {
  const { key, fun } = useGetProductsId.info(id, configOverride);

  return client.getQueryData(key)
    ? Promise.resolve()
    : client.prefetchQuery({
        queryKey: key,
        queryFn: () => fun(),
        ...options,
      });
};
export const useGetUsersId = (
  id: string,
  options?: SwaggerTypescriptUseQueryOptions<User>,
  configOverride?: AxiosRequestConfig,
) => {
  const { key, fun } = useGetUsersId.info(id, configOverride);

  return useSuspenseQuery({
    queryKey: key,
    queryFn: fun,
    ...options,
  });
};
useGetUsersId.info = (id: string, configOverride?: AxiosRequestConfig) => {
  return {
    key: [getUsersId.key, id] as QueryKey,
    fun: () => getUsersId(id, configOverride),
  };
};
useGetUsersId.prefetch = (
  client: QueryClient,
  id: string,
  options?: SwaggerTypescriptUseQueryOptions<User>,
  configOverride?: AxiosRequestConfig,
) => {
  const { key, fun } = useGetUsersId.info(id, configOverride);

  return client.getQueryData(key)
    ? Promise.resolve()
    : client.prefetchQuery({
        queryKey: key,
        queryFn: () => fun(),
        ...options,
      });
};
export const usePostOrders = <TExtra,>(
  options?: SwaggerTypescriptUseMutationOptions<
    Order,
    { requestBody: CreateOrderInput },
    TExtra
  >,
) => {
  return useMutation({
    mutationFn: (_o) => {
      const { requestBody, configOverride } = _o || {};
      return postOrders(requestBody, configOverride);
    },
    ...options,
  });
};
"
`;
